# mini_quant

./: .env.example  .gitignore  CHANGELOG.md  README.md  _commit_msg2.txt  data_fetcher.py  do_final.py  do_fix.py  do_fixes.py  do_readme.py  do_scripts.py  factor_engine.py  pyproject.toml  requirements.txt  run_backtest.py  train_model.py
.claude/: doc-checklist.md
docs/: TO_DO_LIST.md  skill.md  交易逻辑说明.md  交易频率影响分析.md  使用指南.md  实验手册.md  审查报告.md  工程化改造.md  当前记录与更新计划.md  操作流程.md  账户选择.md  量化交易自动化方案.md
models/V1_28stock_fwd21/: feature_importance.csv  manifest.json  oos_predictions.parquet
models/V2_118stock_fwd10/: feature_importance.csv  manifest.json  oos_predictions.parquet
quant/: __init__.py  config.py  engine.py  factor.py  fetcher.py
quant/io/: __init__.py  alpha_vantage.py  cache.py  mt5_backend.py  yfinance_backend.py
reports/: vif_report.csv
scripts/: README.md  daily_inference.py  run_simulation.py  test_execution.py  vif_test.py
src/: __init__.py  config.py  experiment.py  universe.py  universe.txt
src/backtest/: config.py  engine.py  reporting.py
src/data/: fetcher.py  label.py  preprocess.py
src/execution/: __init__.py  broker.py  order_manager.py  risk.py
src/factors/: __init__.py  assembly.py  mean_reversion.py  momentum.py  regime.py  validation.py  volatility.py
src/io/: __init__.py  alpha_vantage.py  base.py  cache.py  mt5_backend.py  yfinance_backend.py
src/models/: config.py  registry.py  (+2 more)
test/: test_akshare.py  test_akshare2.py  test_curl.py  test_network.py  test_yahoo.py  test_yahoo2.py
tests/: test_factors.py
(+15 files in other folders)
