[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading"
version = "0.3.0"
description = "自动化量化交易系统 — 中低频 Swing 交易，技术因子 + 横截面模型"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "lty", email = "1392309506@qq.com"},
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "yfinance>=0.2",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "vectorbt>=0.3",
    "requests>=2.31",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
alpha_vantage = [
    "alpha_vantage>=2.3",
]

[project.urls]
Homepage = "https://github.com/1392309506/mini_quant"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]